syntax = "proto3";
option go_package = "protos/go/banking";

package banking;

// Service definition
service BankingService {
  rpc MakeTransaction(TransactionRequest) returns (TransactionResponse);
  rpc GetBalance(BalanceRequest) returns (BalanceResponse);
  rpc CreateAccount(AccountRequest) returns (AccountResponse);
  rpc GetTransactionDetails(TransactionDetailsRequest) returns (TransactionDetailsResponse);
}

message Account {
  string id = 1;
  int32 balance = 2;
}

message Transaction {
  string transactionId = 1;
  string fromAccountId = 2;
  string toAccountId = 3;
  int32 amount = 4;
}

message TransactionRequest {
  string fromAccountId = 1;
  string toAccountId = 2;
  int32 amount = 3;
}

message TransactionResponse {
  string transactionId = 1;
  bool success = 2;
  string message = 3;
}

message BalanceRequest {
  string accountId = 1;
}

message BalanceResponse {
  int32 balance = 1;
}

message AccountRequest {
  int32 initialBalance = 1;
}

message AccountResponse {
  string accountId = 1;
}

message TransactionDetailsRequest {
  string transactionId = 1;
}

message TransactionDetailsResponse {
  Transaction transaction = 1;
}
